@@ -800,7 +800,7 @@ double transformXArithmetic(SEXP x, int index,
     }
     else if (timesOp(x)) {
 	L_nullArithmeticMode = L_multiplying;
-	result = REAL(arg1(x))[0] *
+	result = REAL(arg1(x))[index % LENGTH(arg1(x))] *
 	    transformX(arg2(x), index, vpc, gc,
 		       widthCM, heightCM, dd);
     }
@@ -868,7 +868,7 @@ double transformYArithmetic(SEXP y, int index,
     }
     else if (timesOp(y)) {
 	L_nullArithmeticMode = L_multiplying;
-	result = REAL(arg1(y))[0] *
+	result = REAL(arg1(y))[index % LENGTH(arg1(y))] *
 	    transformY(arg2(y), index, vpc, gc,
 		       widthCM, heightCM, dd);
     }
@@ -936,7 +936,7 @@ double transformWidthArithmetic(SEXP width, int index,
     }
     else if (timesOp(width)) {
 	L_nullArithmeticMode = L_multiplying;
-	result = REAL(arg1(width))[0] *
+	result = REAL(arg1(width))[index % LENGTH(arg1(width))] *
 	    transformWidth(arg2(width), index, vpc, gc,
 			   widthCM, heightCM, dd);
     }
@@ -1004,7 +1004,7 @@ double transformHeightArithmetic(SEXP height, int index,
     }
     else if (timesOp(height)) {
 	L_nullArithmeticMode = L_multiplying;
-	result = REAL(arg1(height))[0] *
+	result = REAL(arg1(height))[index % LENGTH(arg1(height))] *
 	    transformHeight(arg2(height), index, vpc, gc,
 			    widthCM, heightCM, dd);
     }
