@@ -7,8 +7,8 @@ See the file NEWS for changes that affect all versions of R.
 rw1090
 ======
 
-Improved malloc routines from current version of Doug Lea's malloc
-(contributed by David Teller).
+
+***PLACEHOLDER***
 
 
 
@@ -31,6 +31,10 @@ for png/jpeg/bmp device plots (as the Windows GDI function was
 incorrectly documented).
 
 File src/nmath/dnt.c was not being built for the standalone Rmath library.
+
+Improved malloc routines from the current version of Doug Lea's malloc
+(contributed by David Teller) should enable large memory areas to be
+used more effectively.
 
 
 
